2013-01-08  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* doc/xml/manual/status_cxx2011.xml: Document that N3189 is missing.

2013-01-06  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* doc/xml/manual/abi.xml: Update library and symbol versions.

2012-12-18  Matthew Gretton-Dann  <matthew.gretton-dann@linaro.org>

	Backport from mainline
	2012-10-15  Matthias Klose  <doko@ubuntu.com>

	* configure.host: Match arm*-*-linux-* for ARM Linux/GNU.
	* testsuite/20_util/make_signed/requirements/typedefs-2.cc: Likewise.
	* testsuite/20_util/make_unsigned/requirements/typedefs-2.cc: Likewise.

2012-12-18  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* doc/xml/manual/abi.xml: Update URLs for C++ ABI.
	* doc/xml/manual/policy_data_structures_biblio.xml: Add xmlns
	* doc/xml/manual/policy_data_structures.xml: Set filename for chunk.
	* doc/xml/manual/spine.xml: Update copyright years.
	* doc/html/*: Regenerate.

2012-12-17  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* src/c++11/thread.cc: Update copyright years.

2012-12-16  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* src/c++11/thread.cc (execute_native_thread_routine): Do not swallow
	__forced_unwind exceptions.
	* testsuite/30_threads/thread/native_handle/cancel.cc: New.

2012-12-12  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/55631
	* include/ext/alloc_traits.h: Include missing header.
	* include/ext/pointer.h: Likewise.
	* include/ext/string_conversions.h: Require C++11.
	* libsupc++/initializer_list: Reindent.

2012-12-12  Benjamin Kosnik  <bkoz@redhat.com>

        * doc/xml/manual/documentation_hacking.xml: Fix validation issue.

2012-12-10  Benjamin Kosnik  <bkoz@redhat.com>

	* doc/Makefile.am (xml_sources_manual): Add
	policy_data_structures_biblio.xml.
	(${docbook_outdir}/latex): Add.
	(doc-xml-validate-docbook): Split into..
	(doc-xml-validate-dtd-db):... this for DTD.
	(doc-xml-validate-rng-db):... this for Relax NG.
	(doc-pdf-docbook-dirs): Add.
	(doc-pdf-docbook-pre): Add.