@@ -1,3 +1,8 @@
+2013-01-17  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
+	PR libstdc++/52887
+	* src/c++11/regex.cc: Add instantiations for AIX.
+
 2013-01-08  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
 	* doc/xml/manual/status_cxx2011.xml: Document that N3189 is missing.
